cmake_minimum_required (VERSION 2.8.9)

project(test6)

include_directories(include)

set(CMAKE_CXX_STANDARD 11)

add_executable(test6 src/test6.cpp)

target_link_libraries(test6)

install(TARGETS test6
RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/devel/bin
LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/devel/lib
ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/devel/lib/static)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/
DESTINATION ${PROJECT_SOURCE_DIR}/devel/include
FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")


